--- a/example/package.json
+++ b/example/package.json
@@ -5,11 +5,12 @@
   "license": "MIT",
   "private": true,
   "dependencies": {
+    "@jasperdunn/react-date-picker": "link:..",
+    "node-sass": "^4.12.0",
     "prop-types": "^15.6.2",
     "react": "link:../node_modules/react",
     "react-dom": "^16.8.0",
-    "react-scripts": "^2.1.3",
-    "@jasperdunn/react-date-picker": "link:.."
+    "react-scripts": "^2.1.3"
   },
   "scripts": {
     "start": "react-scripts start",
