--- a/example/package.json
+++ b/example/package.json
@@ -4,13 +4,13 @@
   "version": "0.0.0",
   "license": "MIT",
   "private": true,
-  "dependencies": {
-    "@jasperdunn/react-datetime-hooks": "link:..",
+  "devDependencies": {
+    "react-scripts": "3.1.1",
     "node-sass": "^4.12.0",
     "prop-types": "^15.6.2",
+    "@jasperdunn/react-datetime-hooks": "link:..",
     "react": "link:../node_modules/react",
-    "react-dom": "^16.8.0",
-    "react-scripts": "^2.1.3"
+    "react-dom": "link:../node_modules/react-dom"
   },
   "scripts": {
     "start": "react-scripts start",
