--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@babel/plugin-syntax-import-meta": "^7.0.0",
     "@babel/preset-env": "^7.6.0",
     "@babel/preset-react": "^7.0.0",
+    "awesome-typescript-loader": "^5.2.1",
     "cross-env": "^5.2.1",
     "eslint-config-standard": "^11.0.0",
     "eslint-config-standard-react": "^6.0.0",
@@ -62,6 +63,8 @@
     "rollup-plugin-commonjs": "^9.2.0",
     "rollup-plugin-node-resolve": "^4.0.0",
     "rollup-plugin-peer-deps-external": "^2.2.0",
-    "rollup-plugin-url": "^2.2.2"
+    "rollup-plugin-url": "^2.2.2",
+    "source-map-loader": "^0.2.4",
+    "typescript": "^3.6.2"
   }
 }
