--- a/example/package.json
+++ b/example/package.json
@@ -10,7 +10,7 @@
     "node-sass": "^4.12.0",
     "prop-types": "^15.6.2",
     "react": "link:../node_modules/react",
-    "react-dom": "link:../node_modules/react-dom",
+    "react-dom": "^16.9.0",
     "react-scripts": "3.1.1",
     "source-map-loader": "^0.2.4",
     "typescript": "^3.6.2"
