--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@babel/plugin-syntax-import-meta": "^7.0.0",
     "@babel/preset-env": "^7.6.0",
     "@babel/preset-react": "^7.0.0",
+    "@types/react": "^16.9.2",
     "awesome-typescript-loader": "^5.2.1",
     "cross-env": "^5.2.1",
     "eslint-config-standard": "^11.0.0",
@@ -56,7 +57,6 @@
     "eslint-plugin-standard": "^3.1.0",
     "gh-pages": "^2.0.1",
     "react": "^16.9.0",
-    "react-dom": "^16.9.0",
     "react-scripts": "3.1.1",
     "rollup": "^1.1.2",
     "rollup-plugin-babel": "^4.3.3",
