--- a/package.json
+++ b/package.json
@@ -1,10 +1,22 @@
 {
-  "name": "@jasperdunn/react-datetime-hooks",
+  "name": "react-datetime-hooks",
+  "homepage": "https://jasperdunn.github.io/react-datetime-hooks",
   "version": "1.0.0",
   "description": "Flexible agnostic functions to help you build datetime components in React",
   "author": "jasperdunn",
+  "keywords": [
+    "react",
+    "hooks",
+    "react-hooks",
+    "date-time",
+    "calendar",
+    "datepicker",
+    "date",
+    "time",
+    "agnostic"
+  ],
   "license": "MIT",
-  "repository": "jasperdunn/@jasperdunn/react-datetime-hooks",
+  "repository": "github:jasperdunn/react-datetime-hooks",
   "main": "dist/index.js",
   "module": "dist/index.es.js",
   "jsnext:main": "dist/index.es.js",
@@ -22,49 +34,33 @@
     "deploy": "gh-pages -d example/build"
   },
   "peerDependencies": {
-    "react": "^16.9.0"
+    "react": "^16.9.0",
+    "react-dom": "^16.9.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.6.0",
-    "@babel/plugin-external-helpers": "^7.0.0",
-    "@babel/plugin-proposal-class-properties": "^7.5.5",
-    "@babel/plugin-proposal-decorators": "^7.6.0",
-    "@babel/plugin-proposal-do-expressions": "^7.6.0",
-    "@babel/plugin-proposal-export-default-from": "^7.5.2",
-    "@babel/plugin-proposal-export-namespace-from": "^7.5.2",
-    "@babel/plugin-proposal-function-bind": "^7.0.0",
-    "@babel/plugin-proposal-function-sent": "^7.5.0",
-    "@babel/plugin-proposal-json-strings": "^7.0.0",
-    "@babel/plugin-proposal-logical-assignment-operators": "^7.0.0",
-    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.0.0",
-    "@babel/plugin-proposal-numeric-separator": "^7.0.0",
-    "@babel/plugin-proposal-optional-chaining": "^7.6.0",
-    "@babel/plugin-proposal-pipeline-operator": "^7.5.0",
-    "@babel/plugin-proposal-throw-expressions": "^7.0.0",
-    "@babel/plugin-syntax-dynamic-import": "^7.0.0",
-    "@babel/plugin-syntax-import-meta": "^7.0.0",
-    "@babel/preset-env": "^7.6.0",
-    "@babel/preset-react": "^7.0.0",
+    "@types/jest": "^24.0.18",
     "@types/react": "^16.9.2",
-    "awesome-typescript-loader": "^5.2.1",
+    "@types/react-dom": "^16.9.0",
+    "babel-core": "^6.26.3",
+    "babel-runtime": "^6.26.0",
     "cross-env": "^5.2.1",
-    "eslint-config-standard": "^11.0.0",
-    "eslint-config-standard-react": "^6.0.0",
-    "eslint-plugin-import": "^2.13.0",
-    "eslint-plugin-node": "^7.0.1",
-    "eslint-plugin-promise": "^4.0.0",
-    "eslint-plugin-react": "^7.10.0",
-    "eslint-plugin-standard": "^3.1.0",
-    "gh-pages": "^2.0.1",
+    "gh-pages": "^2.1.1",
     "react": "^16.9.0",
+    "react-dom": "^16.9.0",
     "react-scripts": "3.1.1",
-    "rollup": "^1.1.2",
+    "rollup": "^1.21.2",
     "rollup-plugin-babel": "^4.3.3",
-    "rollup-plugin-commonjs": "^9.2.0",
-    "rollup-plugin-node-resolve": "^4.0.0",
+    "rollup-plugin-commonjs": "^10.1.0",
+    "rollup-plugin-node-resolve": "^5.2.0",
     "rollup-plugin-peer-deps-external": "^2.2.0",
-    "rollup-plugin-url": "^2.2.2",
-    "source-map-loader": "^0.2.4",
-    "typescript": "^3.6.2"
-  }
+    "rollup-plugin-typescript2": "^0.24.1",
+    "tslint": "^5.20.0",
+    "tslint-eslint-rules": "^5.4.0",
+    "tslint-react": "^4.0.0",
+    "tslint-react-hooks": "^2.2.1",
+    "typescript": "^3.6.3"
+  },
+  "files": [
+    "dist"
+  ]
 }
