--- a/example/package.json
+++ b/example/package.json
@@ -4,16 +4,14 @@
   "version": "0.0.0",
   "license": "MIT",
   "private": true,
-  "dependencies": {
-    "react": "link:../node_modules/react",
-    "react-datetime-hooks": "link:..",
-    "react-dom": "link:../node_modules/react-dom"
-  },
   "devDependencies": {
-    "@types/react": "link:../node_modules/@types/react",
-    "@types/react-dom": "link:../node_modules/@types/react-dom",
+    "@jasperdunn/react-datetime-hooks": "link:..",
+    "@types/react": "^17.0.5",
+    "@types/react-dom": "^17.0.5",
     "node-sass": "^4.12.0",
-    "react-scripts": "3.1.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-scripts": "4.0.3",
     "typescript": "link:../node_modules/typescript"
   },
   "scripts": {
@@ -21,16 +19,10 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom"
   },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  }
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
